horizontal scroll fix

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,5 +1,7 @@
 body {
     background: #202020;
+    max-width: 100%;
+    overflow-x: hidden;
     /* animation-delay: 3s; */
     /* animation: fadeInAnimation ease 3s;
     animation-iteration-count: 1;
